--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </header>
   <body>
     <h1>素敵カフェ</h1>
-    <p>とっても素敵なカフェですよ。ぜひおこしください。！ </p>
+    <p>とっても素敵なカフェですよ。ぜひおこしください。！wi-fiもあります！ </p>
    </body>
 </html>
